<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmountForm">

    <TextView
        android:id="@+id/title3"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="34dp"
        android:text="@string/title3"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/tv_1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title3" />

    <EditText
        android:id="@+id/enterPin"
        android:layout_width="372dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="Amount"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#707070"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_1" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="369dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/button_background"
        android:gravity="center|center_horizontal|center_vertical"
        android:hapticFeedbackEnabled="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/confirmBtn"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPin" />
</androidx.constraintlayout.widget.ConstraintLayout>