<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".paymentMethod">

    <TextView
        android:id="@+id/title2"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/creditcard"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="35dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton1"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <TextView
        android:id="@+id/tv_crditcardbtn"
        android:layout_width="126dp"
        android:layout_height="28dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_crditcardbtn"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

    <TextView
        android:id="@+id/tv_cashbtn"
        android:layout_width="126dp"
        android:layout_height="29dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_cashbtn"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/tv_crditcardbtn"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>